<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
    android:id="@+id/Opcionestxt"
    android:title="@string/opcionestxt">

    <menu>

        <item
            android:id="@+id/InicioCliente"
            android:title="@string/inicioCliente"
            android:icon="@drawable/inicio_ico"/>
    </menu>

</item>

<item
android:id="@+id/MasOpcionestxt"
android:title="@string/MasOpcionestxt">

<menu>
    <item
        android:id="@+id/AcercaDE"
        android:title="@string/AcercaDE"
        android:icon="@drawable/info_ico"/>
    <item
        android:id="@+id/Compartir"
        android:title="@string/Compartir"
        android:icon="@drawable/share_ico"/>

</menu>

</item>

    </menu>
