<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#212F3D"
    tools:context=".Carga">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <!--carga-->
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/carga"/>

        <!--nombre app-->
            <TextView
                android:id="@+id/app_name"
                android:textSize="40sp"
                android:textColor="#F1F"
                android:gravity="center"
                android:layout_marginTop="20sp"
                android:text="@string/app_name"
                android:fontFamily="@font/comfortaaregular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <!--nombre desarrollador-->
        <TextView
            android:id="@+id/desarrollador"
            android:text="@string/desarrollador"
            android:textSize="20sp"
            android:textColor="#aaa"
            android:gravity="center"
            android:fontFamily="@font/comfortaalight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/desarrolladora"
            android:text="@string/desarrolladora"
            android:textSize="20sp"
            android:textColor="#aaa"
            android:gravity="center"
            android:fontFamily="@font/comfortaalight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--canimacaion-->
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


</RelativeLayout>